New in v1.2.1 (????/??/??)
---------------------------

Properly catch KeyboardInterrupt on Python 2.5. (Andrew Ferguson)

Don't crash if a CacheIndexable tries to clear a non-existent cache entry,
since the entry must already be cleared. (Andrew Ferguson)


New in v1.2.0 (2008/07/27)
---------------------------

Fall back on the Python make_file_dict function when the filename contains
non-ASCII characters. (Andrew Ferguson)

Ignore Extended Attributes which have Unicode characters outside the current
system representation. These will be correctly handled when rdiff-backup
switches to Python 3, which will have full Unicode support. (Andrew Ferguson)


New in v1.1.17 (2008/07/17)
---------------------------

Move make_file_dict_python so that it is run on the remote end instead of
the local end. This improves performance for Windows hosts since it eliminates
the lag due to checking os.name. It also makes the Windows design parallel
to the Posix design, since the Windows method now returns a dictionary across
the wire. (Andrew Ferguson)

Catch EPERM error when trying to write extended attributes. (Andrew Ferguson)

Allow rdiff-backup to be built into a single executable on Windows using
py2exe ("setup.py py2exe --single-file"). (Patch from Josh Nisly)

Properly handle uid/gid comparison when the metadata about a destination
file has become corrupt. Closes Debian bug #410586. (Andrew Ferguson)

Properly handle hardlink comparison when the metadata about a destination
hardlink has become corrupt. Closes Debian bug #486653. (Andrew Ferguson)

Fix typo in fs_abilities noticed by Martin Krafft. Add EILSEQ ("Invalid or
incomplete multibyte or wide character") to the list of recoverable errors.
Thanks to Hanno Stock for catching that. (Andrew Ferguson)

Catch another reasonable error when reading EAs. (Andrew Ferguson)

Use the Python os.lstat() on Windows. (Patch from Josh Nisly)

Support for Windows ACLs. (Patch from Josh Nisly and Fred Gansevles)
