@@ -776,6 +776,9 @@ def backup_set_globals(rpin, force):
 
 	"""
 	assert Globals.rbdir.conn is Globals.local_connection
+	if rpin.conn.Main.get_os_name() == "nt":
+		log.Log("Hardlinks disabled by default on Windows", 4)
+		Globals.set('preserve_hardlinks', 0)
 	src_fsa = rpin.conn.fs_abilities.get_readonly_fsa('source', rpin)
 	log.Log(str(src_fsa), 4)
 	dest_fsa = FSAbilities('destination').init_readwrite(Globals.rbdir)
@@ -803,6 +806,9 @@ def backup_set_globals(rpin, force):
 def restore_set_globals(rpout):
 	"""Set fsa related globals for restore session, given in/out rps"""
 	assert rpout.conn is Globals.local_connection
+	if rpout.conn.Main.get_os_name() == "nt":
+		log.Log("Hardlinks disabled by default on Windows", 4)
+		Globals.set('preserve_hardlinks', 0)
 	src_fsa = Globals.rbdir.conn.fs_abilities.get_readonly_fsa(
 		                  'rdiff-backup repository', Globals.rbdir)
 	log.Log(str(src_fsa), 4)
