@@ -1,6 +1,9 @@
 New in v1.2.1 (????/??/??)
 ---------------------------
 
+Disable hardlinks by default when backup source or restore destination is
+on Windows. (Andrew Ferguson)
+
 Properly catch KeyboardInterrupt on Python 2.5. (Andrew Ferguson)
 
 Don't crash if a CacheIndexable tries to clear a non-existent cache entry,
